tests/ImportTests/data/NonExistantSymbol.xpl
import std.hello.DoesNotExist;

node[] main() {
}
